simulation pointers with last message with result (#12)
* upload not tested last simulation message

* handle all cases for last simulation message with result

* fix updating hyper params

* upgrade the logging for hyper params

* fix idea problem and adjust lambdas

* fix idea problem and adjust lambdas

---------

Co-authored-by: kovaIenko <rkovalenko@viax.io>